admin-dash.css
* {
  box-sizing: border-box;
}
body {
    margin: 0 1rem;
    padding:0;
    color: var(--primaryText);
    font-family: "Open Sans", sans-serif;
}
/* Colors and Typography */
:root {
  --background: #f9f9f9;
  --primaryText: #180126;
  --secondaryText: #7e7a8f;
  --tertiaryText: #c3c7d2;
  --primaryColor: #3a5df8;
  --secondaryColor: #f3ea12;
}
button {
  cursor: pointer;
}
h1 {
  font-size: 30px;
  font-weight: 400;
}
h2 {
  font-size: 20px;
  font-weight: 700;
}
h3 {
  font-size: 16px;
  font-weight: 700;
}
p {
  font-size: 16px;
  font-weight: 400;
}

/* Header */
.mainHead {
    grid-area: header;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.logo {
  width: 60%;
  margin: 10px;
}
/* Nav */
.mainNav {
    grid-area: sidebar;
    background-color: var(--primaryColor);
    border-radius: 0 20px 0 0;
    color: var(--background);
    margin-top: 0rem;
    display: none;
}
nav a,
  nav ul {
    color: var(--background);
    text-decoration: none;
    list-style-type: none;
    margin-left: 0;
    padding: 0;
    margin-top:0;
  }
  nav a:hover,
  .activeLink {
    color: var(--secondaryColor);
  }
  .navLinks {
    padding: 2rem;
  }
  .navLinks li {
    line-height: 80px;
  }
  .navLinks img {
    vertical-align: middle;
    padding-right: 5px;
  }

/* Welcome Alerts */
.welcome {
    grid-area: welcome;
    justify-content: space-between;
    align-items: center;
    border-radius: 20px;
    background-color: var(--background);
    border: 1px solid var(--tertiaryText);
    margin: 0 1rem 0rem 1rem;
    padding: 2rem;
}
.welcome p,
  .welcome h1 {
    line-height: normal;
  }
  .welcomeAlerts span {
    font-weight: 700;
  }
.userPic {
  display: none;
}
 /* Clinics */ 
.clinics{
    grid-area: clinics;
    margin: 1rem;
}

/* Users */
.users {
    grid-area: users;
    margin: 1rem;
}
.users p {
  line-height: 2;
}

.bubble {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--background);
  border: 1px solid var(--tertiaryText);
  border-radius: 20px;
  margin: 1rem 0;
  padding: 7px;
  text-align: center;
}
#contactsPic {
  width: 70px;
  margin-left: 5px;
}

/* Reviews */
.reviews {
    grid-area: reviews;
    margin: 0 1rem 1rem 1rem;
}

/* Styling for Table */
.reviews {
  overflow-x: auto;
}
.reviews table {
  width: 600px;
}
.reviews td:first-child {
  width: 225px;

}
table {
  border-collapse: separate;
  border-spacing: 0 1rem;
  text-align: left;
}
th {
  padding: 0 10px;
}
td {
  border: 1px solid var(--tertiaryText);
  border-style: solid none;
  padding: 10px;
  background-color: var(--background);
}
td:first-child {
  border-left-style: solid;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
}
td:last-child {
  border-right-style: solid;
  border-bottom-right-radius: 20px;
  border-top-right-radius: 20px;
  margin-right: 0;
}
td > * {
  vertical-align: middle;
  margin-right: 5px;
}
td.address {
  text-align: center;
}
td.location {
  width: 40%;
}

.stars {
  width: 90px;
  padding:0;
  margin:0;
}
/* Styling for Headings */
.heading {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.heading h2 {
  width: 60%;
}
/* Button Styling */
button.edit {
  padding: 0;
  margin: 0;
  border: none;
  background-color: transparent;
  cursor: pointer;
}
.view img {
  width: 30px;
}
button.view {
  width: 50px;
  height: 34px;
  border-radius: 40px;
  border: 1px solid var(--tertiaryText);
  background-color: var(--background);
  margin-left: 5px;
}
button.all {
  width: 55px;
  height: 24px;
  border-radius: 40px;
  background-color: var(--primaryText);
  color: white;
  border: none;
}
button.action {
  border: none;
  border-radius: 4px;
  color: var(--primaryText);
  height: 38px;
  width: 63px;
  font-weight: 700;
  font-size: 13px;
  margin-right: 5px;
}
button.review {
  background-color: #fec9de;
}
button.accept {
  background-color: #aceb98;
}
/* Mobile first column layout */
.wrapper {
    display: grid;
    grid-template-areas: 
        "header"
        "sidebar"
        "welcome"
        "clinics"
        "users"
        "reviews";
}

@media (min-width: 801px) {
    body {
      margin:0 1rem 0 0;
    }
    .wrapper {
        grid-template-columns: 309px 1.5fr 1fr;
        grid-template-areas: 
            "header  header header"
            "sidebar welcome welcome"
            "sidebar clinics users"
            "sidebar reviews reviews";
    }
    h1 {
      font-size: 37px;
    }
    h2 {
      font-size: 28px;
    }
    .heading h2 {
      width: auto;
    }
    .reviews .heading  {
      justify-content: flex-start;
    }
   .reviews .heading button  {
      margin-left: 10px;
    }
    nav ul{
        flex-direction: column;
    }
    .mainNav{
      display:block;
    }
    .logo {
      width: auto;
    }
    .icon {
      display: none;  
    }
    .welcome {
      display: flex;
    }
    .userPic {
      display: block;
    }
    #contactsPic {
      width: 75px;
    }
    .reviews table, .clinics table {
      width: 100%;
    }
}

